website: Fix Overflow Issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -501,9 +501,7 @@ pre {
 
 .row {
   display: flex;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px; }
+  flex-wrap: wrap;}
 
 .no-gutters {
   margin-right: 0;
